feat: add /stacks/get-date-at-block endpoint
